--- a/index.html
+++ b/index.html
@@ -458,29 +458,29 @@
         
         // 3. 題目資料庫 (已加入 desc 欄位)
         const database = [
-            { id: 1, type: '線蟲', img: "images/1.jpg", ans: ["Bursa copulatory of Angiostrongylus cantonensis", "male of Angiostrongylus cantonensis", "Spicule of Angiostrongylus cantonensis"], desc: "廣東住血線蟲 L5雄蟲" },
+            { id: 1, type: '線蟲', img: "images/1.jpg", ans: ["Bursa copulatory of Angiostrongylus cantonensis", "male of Angiostrongylus cantonensis", "Spicule of Angiostrongylus cantonensis"], desc: "廣東住血線蟲 L5雄蟲；前面形容也可以寫 Male of-, Spicule of-" },
             { id: 2, type: '線蟲', img: "images/2.jpg", ans: ["Female of Angiostrongylus cantonensis", "Posterior portion of Angiostrongylus cantonensis"], desc: "廣東住血線蟲 L5雌蟲 尾部整體呈溜滑梯狀" },
             { id: 3, type: '線蟲', img: "images/3.jpg", ans: ["anterior end of Anisakis spp.", "boring tooth of Anisakis spp."], desc: "海獸胃線蟲 前端有boring tooth鑽洞齒，與頭端呈切線方向" },
             { id: 4, type: '線蟲', img: "images/4.jpg", ans: ["terminal spine of Anisakis spp."], desc: "海獸胃線蟲 尾刺與尾端垂直" },
             { id: 5, type: '線蟲', img: "images/5.jpg", ans: ["Egg of Trichuris trichiura"], desc: "鞭蟲卵 Barrel-shaped 酒桶狀、厚卵殼(轉動時會像兩條線的膜)、無橫紋" },
-            { id: 6, type: '線蟲', img: "images/6.jpg", ans: ["Cyst of Trichinella Spiralis"], desc: "旋毛蟲" },
-            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["adult male of Trichuris trichiura"], desc: "雄鞭蟲 頭細 尾端有尖尖的交尾刺" },
-            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["adult female of Trichuris trichiura"], desc: "雌鞭蟲成蟲 頭細 尾圓鈍" },
+            { id: 6, type: '線蟲', img: "images/6.jpg", ans: ["Cyst of Trichinella spiralis"], desc: "旋毛蟲" },
+            { id: 7, type: '線蟲', img: "images/7.jpg", ans: ["Adult male of Trichuris trichiura", "Male adult of Trichuris trichiura"], desc: "雄鞭蟲 頭細 尾端有尖尖的交尾刺" },
+            { id: 8, type: '線蟲', img: "images/8.jpg", ans: ["Adult female of Trichuris trichiura, "Female adult of Trichuris trichiura"], desc: "雌鞭蟲成蟲 頭細 尾圓鈍" },
             { id: 9, type: '線蟲', img: "images/9.jpg", ans: ["Egg of Enterobius vermicularis"], desc: "蟯蟲卵 雙層殼且不對稱 =  一邊扁一邊凸" },
             { id: 10, type: '線蟲', img: "images/10.jpg", ans: ["Embryonated egg of Enterobius vermicularis"], desc: "蟯蟲胎蟲卵 卵殼中出現胎蟲(一或多條摺痕)" },
-            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["female of Enterobius vermicularis", "female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "蟯蟲的雌成蟲 頭端兩側有角質化鼓起的側翼 顯微鏡下呈紅色" },
-            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["fertilized egg of Ascaris lumbricoides"], desc: "受精蛔蟲卵 外型圓，卵細胞顆粒細小且排列緊密，波浪狀外膜分布均勻" },
-            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["unfertilized egg of Ascaris lumbricoides"], desc: "未受精蛔蟲卵 外型橢圓，卵細胞顆粒較粗大且排列較鬆散，波浪狀外膜較不平" },
-            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["embryonated egg of Ascaris lumbricoides"], desc: "蛔蟲胎蟲卵 蟲體蜷曲在蟲卵內，再加上波浪狀外膜確定是蛔蟲" },
-            { id: 15, type: '線蟲', img: "images/15.jpg", ans: ["embryonated egg of hookworm"], desc: "鉤蟲胎蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
-            { id: 16, type: '線蟲', img: "images/16.jpg", ans: ["egg of hookworm"], desc: "鉤蟲蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
-            { id: 17, type: '線蟲', img: "images/17.jpg", ans: ["Buccal capsule of Ancylostoma duodenale"], desc: "看到尖牙就可以確定是十二指腸鉤蟲" },
+            { id: 11, type: '線蟲', img: "images/11.jpg", ans: ["Adult female of Enterobius vermicularis", "Female adult of Enterobius vermicularis", "adult female of enterobius vermicularis"], desc: "蟯蟲的雌成蟲 頭端兩側有角質化鼓起的側翼 顯微鏡下呈紅色" },
+            { id: 12, type: '線蟲', img: "images/12.jpg", ans: ["Fertilized egg of Ascaris lumbricoides"], desc: "受精蛔蟲卵 外型圓，卵細胞顆粒細小且排列緊密，波浪狀外膜分布均勻" },
+            { id: 13, type: '線蟲', img: "images/13.jpg", ans: ["Unfertilized egg of Ascaris lumbricoides"], desc: "未受精蛔蟲卵 外型橢圓，卵細胞顆粒較粗大且排列較鬆散，波浪狀外膜較不平" },
+            { id: 14, type: '線蟲', img: "images/14.jpg", ans: ["Embryonated egg of Ascaris lumbricoides"], desc: "蛔蟲胎蟲卵 蟲體蜷曲在蟲卵內，再加上波浪狀外膜確定是蛔蟲" },
+            { id: 15, type: '線蟲', img: "images/15.jpg", ans: ["Embryonated egg of hookworm"], desc: "鉤蟲胎蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
+            { id: 16, type: '線蟲', img: "images/16.jpg", ans: ["Egg of hookworm"], desc: "鉤蟲蟲卵  似蟯蟲，但蟯蟲卵殼較厚且一邊較凸一邊較扁平" },
+            { id: 17, type: '線蟲', img: "images/17.jpg", ans: ["Buccal capsule of Ancyclostoma duodenale"], desc: "看到尖牙就可以確定是十二指腸鉤蟲" },
             { id: 18, type: '線蟲', img: "images/18.jpg", ans: ["Buccal capsule of Necator americanus"], desc: "無牙齒、有倒V字形切板者為美洲鉤蟲" },
             { id: 19, type: '線蟲', img: "images/19.jpg", ans: ["Filariform larva of Strongyloides stercoralis"], desc: "糞小桿線蟲F-form 沒有外鞘結構，且末端不會形成細尖、鈍或是倒V" },
-            { id: 20, type: '線蟲', img: "images/20.jpg", ans: ["Filariform Larva of Necator americanus"], desc: "美洲鉤蟲F-form 有外鞘+有明顯橫紋(striation)" },
-            { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform Larva of Ancylostoma duodenale"], desc: "十二指腸鉤蟲F-form 有外鞘+但不具有橫紋" },
-            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["microfilaria of Wuchereria bancrofti"], desc: "班氏絲蟲微絲蟲 蟲體捲曲度不大" },
-            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["microfilaria of Brugia malayi"], desc: "馬來絲蟲微絲蟲 非常捲曲" },
+            { id: 20, type: '線蟲', img: "images/20.jpg", ans: ["Filariform larva of Necator americanus"], desc: "美洲鉤蟲F-form 有外鞘+有明顯橫紋(striation)" },
+            { id: 21, type: '線蟲', img: "images/21.jpg", ans: ["Filariform larva of Ancyclostoma duodenale"], desc: "十二指腸鉤蟲F-form 有外鞘+但不具有橫紋" },
+            { id: 22, type: '線蟲', img: "images/22.jpg", ans: ["Microfilaria of Wuchereria bancrofti"], desc: "班氏絲蟲微絲蟲 蟲體捲曲度不大" },
+            { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["Microfilaria of Brugia malayi"], desc: "馬來絲蟲微絲蟲 非常捲曲" },
             { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis Buski"], desc: "薑片蟲蟲卵 長橢圓形，淡黃色或黃色，薄殼，內部有一顆一顆的卵細胞" },
             { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "薑片蟲成蟲 腸道最大隻的吸蟲(只能看到約2/3的蟲體)" },
             { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "橫川異形吸蟲成蟲 中間藍色卵巢(?) 尾端兩顆淡黃藍圓睪丸 " },
@@ -1051,4 +1051,5 @@
     </script>
 </body>
 </html>
+
 
