--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
             
             <p>選擇練習範圍</p>
             <select id="category-select">
-                <option value="all">🔥 我全都要</option>
-                <option value="favorites">🌟 我的收藏</option>
-                <option value="egg">🥚 蟲卵專區</option>
-                <option value="線蟲">🪱 線蟲 </option>
-                <option value="絛蟲">🎗️ 絛蟲 </option>
-                <option value="吸蟲">🍃 吸蟲 </option>
-                <option value="原蟲">🦠 原蟲 </option>
+                <option value="all">🔥 我全都要 x67</option>
+                <option value="favorites">🌟 特別標記</option>
+                <option value="egg">🥚 蟲卵專區 x19</option>
+                <option value="線蟲">🪱 線蟲 x23</option>
+                <option value="絛蟲">🎗️ 絛蟲 x12</option>
+                <option value="吸蟲">🍃 吸蟲 x15</option>
+                <option value="原蟲">🦠 原蟲 x17</option>
             </select>
 
             <p>設定題數 (跑台預設 10 題)</p>
@@ -1105,3 +1105,4 @@
     </script>
 </body>
 </html>
+
