--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
             <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
 
-            <p>輸入暱稱</p>
+            <p>輸入暱稱(計時才需要)</p>
             <input type="text" id="nickname" placeholder="...." maxlength="10">
             
             <div class="btn-group">
@@ -347,9 +347,9 @@
 
     <div id="timer-modal" class="modal">
         <div class="modal-content">
-            <h3 style="margin-top:0;">⏱️ 選擇挑戰秒數</h3>
+            <h3 style="margin-top:0;">⏱️ 選擇秒數</h3>
             <button class="timer-btn btn-40s" onclick="confirmRanked(40)">40 秒 (標準)</button>
-            <button class="timer-btn btn-50s" onclick="confirmRanked(50)">50 秒 (寬鬆)</button>
+            <button class="timer-btn btn-50s" onclick="confirmRanked(50)">50 秒 (玻片動到了)</button>
             <button class="timer-btn btn-cancel" onclick="closeTimerModal()">取消</button>
         </div>
     </div>
@@ -1105,5 +1105,6 @@
     </script>
 </body>
 </html>
+
 
 
