--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         
         // ★★★ 公告內容設定區 ★★★
         const CURRENT_ANNOUNCEMENT = {
-            message: "⚠️ 公告：Ancylostoma 多一個c已修正" // <--- 只要改這裡的文字，網頁上就會更新
+            message: "⚠️ 公告：yokogawai 是小寫y；Ancylo....多一個c" // <--- 只要改這裡的文字，網頁上就會更新
         };
 
         // 3. 題目資料庫
@@ -622,7 +622,7 @@
             { id: 23, type: '線蟲', img: "images/23.jpg", ans: ["Microfilaria of Brugia malayi"], desc: "馬來絲蟲微絲蟲 非常捲曲" },
             { id: 24, type: '吸蟲', img: "images/24.jpg", ans: ["Egg of Fasciolopsis buski"], desc: "薑片蟲蟲卵 長橢圓形，淡黃色或黃色，薄殼，內部有一顆一顆的卵細胞" },
             { id: 25, type: '吸蟲', img: "images/25.jpg", ans: ["Adult worm of Fasciolopsis buski"], desc: "薑片蟲成蟲 腸道最大隻的吸蟲(只能看到約2/3的蟲體)" },
-            { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus Yokogawai"], desc: "橫川異形吸蟲成蟲 中間藍色卵巢(?) 尾端兩顆淡黃藍圓睪丸 " },
+            { id: 26, type: '吸蟲', img: "images/26.jpg", ans: ["Adult worm of Metagonimus yokogawai"], desc: "橫川異形吸蟲成蟲 中間藍色卵巢(?) 尾端兩顆淡黃藍圓睪丸 " },
             { id: 27, type: '吸蟲', img: "images/27.jpg", ans: ["Adult worm of Echinostoma revolutum"], desc: "外旋棘口吸蟲成蟲 腹吸盤在中間靠前" },
             { id: 28, type: '吸蟲', img: "images/28.jpg", ans: ["Egg of Paragonimus westermani"], desc: "衛氏肺吸蟲卵 和薑片蟲卵類似，最大的不同就在於衛氏肺吸蟲有明顯卵蓋、且卵比較小" },
             { id: 29, type: '吸蟲', img: "images/29.jpg", ans: ["Adult worm of Paragonimus westermani"], desc: "衛氏肺吸蟲成蟲" },
@@ -1298,3 +1298,4 @@
     </script>
 </body>
 </html>
+
