--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <div id="feedback-modal" class="modal">
         <div class="modal-content">
             <h3 style="margin-top:0;">💬 匿名意見回饋</h3>
-            <p style="font-size:14px; color:#666; margin-bottom:10px;">有什麼建議或錯誤的都可以說！：</p>
+            <p style="font-size:14px; color:#666; margin-bottom:10px;">有什麼建議或錯誤的都可以說！(真的匿名啦)：</p>
             <textarea id="feedback-text" placeholder="輸入內容..."></textarea>
             <button class="timer-btn btn-50s" id="btn-send-feedback" onclick="sendFeedback()">📤 送出</button>
             <button class="timer-btn btn-cancel" onclick="closeFeedbackModal()">取消</button>
@@ -1298,4 +1298,5 @@
     </script>
 </body>
 </html>
+
 
