--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         
         // ★★★ 公告內容設定區 ★★★
         const CURRENT_ANNOUNCEMENT = {
-            message: "⚠️ 最後一天大家加油！" // <--- 只要改這裡的文字，網頁上就會更新
+            message: "⚠️ 哈哈回饋系統一直是壞掉的 現在才修好" // <--- 只要改這裡的文字，網頁上就會更新
         };
 
         // 3. 題目資料庫
@@ -1298,6 +1298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
