--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         
         // ★★★ 公告內容設定區 ★★★
         const CURRENT_ANNOUNCEMENT = {
-            message: "⚠️ 大家加油！！再撐一下！" 
+            message: "⚠️ 10:20前到505教室～ 祝考試順利！" 
         };
 
         // 3. 題目資料庫
@@ -1361,4 +1361,5 @@
     </script>
 </body>
 </html>
+
 
